--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,11 @@ section {
     transform: rotate(-360deg);
   }
 }
+
+.yarl__portal{
+  z-index: 9999999999;
+}
+.yarl__container{
+  background-color: rgba(142, 174, 186, 0.9);
+  backdrop-filter: blur(5px);
+}
