--- a/src/App.css
+++ b/src/App.css
@@ -276,7 +276,7 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1002;
+  z-index: 999999999999999;
   text-align: center;
 }
 
