--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ section {
   color: #f44292;
   position: fixed;
   animation: falling 6s infinite linear;
-  z-index: 1000000000;
+  z-index: 100;
 }
 
 .heart-falling:nth-of-type(1) {
@@ -119,10 +119,10 @@ section {
   }
 }
 
-.yarl__portal{
+.yarl__portal {
   z-index: 9999999999;
 }
-.yarl__container{
+.yarl__container {
   background-color: rgba(142, 174, 186, 0.9);
   backdrop-filter: blur(5px);
 }
