--- a/src/App.css
+++ b/src/App.css
@@ -7998,3 +7998,8 @@ textarea.form-control {
   background-color: #ff1a1a;
   border-left: 5px solid red;
 }
+
+.timeline-gallery-del img {
+  object-fit: cover;
+  aspect-ratio: 3 / 4;
+}
