--- a/src/components/OrderSongModal/style.css
+++ b/src/components/OrderSongModal/style.css
@@ -4,7 +4,7 @@
   max-width: 100%;
   margin: auto;
   padding: 20px;
-  background-color: #8eaeba;
+  background-color: #8eaebacc;
   border-radius: 15px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25); /* Shadow cho modal */
   position: relative;
@@ -94,10 +94,10 @@
 .modal-close {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 15px;
   background-color: transparent;
   border: none;
   font-size: 20px;
-  color: #555;
+  color: #fff;
   cursor: pointer;
 }
