--- a/src/index.css
+++ b/src/index.css
@@ -126,3 +126,13 @@ section {
   background-color: rgba(142, 174, 186, 0.9);
   backdrop-filter: blur(5px);
 }
+.lazy-load-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.lazy-load-image-loaded {
+  width: 100%;
+  height: 100%;
+}
