--- a/src/App.css
+++ b/src/App.css
@@ -2646,7 +2646,7 @@ p.center {
   right: -112px;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-large.svg);
+  background-image: url(/flower-large.svg);
   background-repeat: no-repeat;
   background-size: contain;
   -webkit-transform: scaleX(-1) rotate(-16deg);
@@ -2887,7 +2887,7 @@ p.center {
   right: -150px;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-medium.svg);
+  background-image: url(/flower-medium.svg);
   background-repeat: no-repeat;
 }
 
@@ -3003,7 +3003,7 @@ p.center {
   right: -150px;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-medium.svg);
+  background-image: url(/flower-medium.svg);
   background-repeat: no-repeat;
 }
 .gallery-container::after {
@@ -3015,7 +3015,7 @@ p.center {
   left: -165px;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-medium.svg);
+  background-image: url(/flower-medium.svg);
   background-repeat: no-repeat;
   -webkit-transform: scaleY(-1) rotate(-90deg);
   -moz-transform: scaleY(-1) rotate(-90deg);
@@ -3298,7 +3298,7 @@ p.center {
   margin-top: -212px;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-medium.svg);
+  background-image: url(/flower-medium.svg);
   background-repeat: no-repeat;
   background-size: contain;
   -webkit-transform: rotate(45deg);
@@ -3361,7 +3361,7 @@ p.center {
   z-index: 0;
   background-position: center center;
   background-repeat: no-repeat;
-  background-image: url(flower-small.svg);
+  background-image: url(/flower-small.svg);
   background-size: contain;
   -khtml-opacity: 0.2;
   -moz-opacity: 0.2;
@@ -3389,7 +3389,7 @@ p.center {
   z-index: 0;
   background-position: center center;
   background-repeat: no-repeat;
-  background-image: url(flower-small.svg);
+  background-image: url(/flower-small.svg);
   background-size: contain;
   -khtml-opacity: 0.2;
   -moz-opacity: 0.2;
@@ -3895,7 +3895,7 @@ p.center {
   top: 50%;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-large-light.svg);
+  background-image: url(/flower-large-light.svg);
   background-repeat: no-repeat;
   -khtml-opacity: 0.2;
   -moz-opacity: 0.2;
@@ -3939,7 +3939,7 @@ p.center {
   top: 50%;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-large.svg);
+  background-image: url(/flower-large.svg);
   background-repeat: no-repeat;
   background-size: contain;
   -khtml-opacity: 1;
@@ -4943,7 +4943,7 @@ section.side-flowers {
   right: -65px;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-medium.svg);
+  background-image: url(/flower-medium.svg);
   background-repeat: no-repeat;
   background-size: contain;
   -webkit-transform: rotate(-6deg) scaleX(-1);
@@ -5238,7 +5238,7 @@ section.side-flowers {
   left: 0;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-large.svg);
+  background-image: url(/flower-large.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -5512,7 +5512,7 @@ section.side-flowers {
   right: -240px;
   z-index: 1;
   background-position: center center;
-  background-image: url(flower-large-dark.svg);
+  background-image: url(/flower-large-dark.svg);
   background-repeat: no-repeat;
   background-size: contain;
   -webkit-transform: rotate(-24deg);
@@ -5745,7 +5745,7 @@ section.side-flowers {
   right: -45px;
   z-index: -1;
   background-position: center center;
-  background-image: url(flower-large.svg);
+  background-image: url(/flower-large.svg);
   background-repeat: no-repeat;
 }
 
@@ -6020,7 +6020,7 @@ textarea.form-control {
   z-index: -1;
   background-position: center center;
   background-repeat: no-repeat;
-  background-image: url(flower-small.svg);
+  background-image: url(/flower-small.svg);
   background-size: contain;
   -khtml-opacity: 0.5;
   -moz-opacity: 0.5;
