--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -81,7 +81,7 @@
 }
 /* .active, */
 .menu .menu-item .menu-item-link:hover {
-  color: #fff;
+  color: #8eaeba;
 }
 .menu .menu-item .active {
   color: #8eaeba;
